# axum_server

./: Cargo.toml
resources/templates/pages/: home_page.html
src/: main.rs
src/controllers/: mod.rs
src/controllers/user/: update_user.rs
src/controllers/users/: delete_user.rs  get_user.rs  mod.rs  register_user.rs
src/controllers/web/: home_page_controller.rs  mod.rs
src/routes/: mod.rs  user.rs  users.rs  web.rs
src/utils/: mod.rs
src/utils/auth/: middleware.rs  mod.rs
src/utils/layout/: mod.rs
