[package]
name = "axum_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.0"
tokio = { version = "1", features = ["full"] }
tower = "0.5.2"
tower-livereload = "0.9.5"
tower-http = {version = "0.6.2", features = ["fs"] } # For Gzip, CORS, etc.
dotenvy = "0.15"  # For .env file support
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum-extra = "0.10.0"
minijinja ="2.5.0"

